--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+e2fsprogs (1.46.2-2pexip4) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:31:34 +0100
+
 e2fsprogs (1.46.2-2pexip3) pexip-bullseye; urgency=medium
 
   * Rebuild for override changes
