--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+e2fsprogs (1.47.0-2+pexip24u3) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 15:56:24 +0000
+
 e2fsprogs (1.47.0-2pexip2) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
